fix overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
     width: 100%;
     height: 100%;
     visibility: hidden;
+    overflow: auto;
 
     -webkit-transition: transform 1s;
     -moz-transition: transform 1s;
@@ -33,6 +34,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+html, body{
+    height: 100%;
 }
 body{
     overflow: hidden;
@@ -47,6 +51,11 @@ body{
     color: #fafafa;
     background-color: #000000;
     opacity: 0.3;
+}
+.main_layout{
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 .main_page,
 .right_page,
@@ -69,7 +78,6 @@ body{
 }
 .active{
     visibility: visible;
-    position: fixed;
 }
 
 /** MAIN PAGE **/
